@@ -110,6 +110,9 @@ public class SimpleFSDirectory extends FSDirectory {
     
     @Override
     public IndexInput slice(String sliceDescription, long offset, long length) throws IOException {
+      if (offset < 0 || length < 0 || offset + length > this.length()) {
+        throw new IllegalArgumentException("slice() " + sliceDescription + " out of bounds: "  + this);
+      }
       return new SimpleFSIndexInput(sliceDescription, file, off + offset, length, getBufferSize());
     }
 
